Properly handle tint in background tab text color calculation.

Bug: 884062
Change-Id: I584dda328551a10db2100d493e802f42da83c1e5
Reviewed-on: https://chromium-review.googlesource.com/1237262
Commit-Queue: Ryan Meier <rameier@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593600}
Former-commit-id: f75989c1388c79a301bbed95b566a0d6baaea28f